tests/Checker/everything/errors/15a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *15: invalid initialiser: scalar initialiser for array
Compilation was unsuccessful.
